fix(rux-table): add spacing tokens and adjust to fit astro 7.0 design
add figma testing and adjust spacing tokens

--- a/packages/web-components/src/components/rux-table/rux-table-header-row/rux-table-header-row.scss
+++ b/packages/web-components/src/components/rux-table/rux-table-header-row/rux-table-header-row.scss
@@ -5,10 +5,3 @@
 :host([hidden]) {
     display: none;
 }
-
-::slotted(rux-table-header-cell:first-child) {
-    padding-left: 1.875rem;
-}
-::slotted(rux-table-header-cell:last-child) {
-    padding-right: 1.875rem;
-}
